<resources>
    <string name="app_name">Ingilizce Cumleler</string>
    <string name="email">E-Mail</string>
    <string name="sifre">Şifre</string>
    <string name="sifremi_unuttum"><u>Şifremi Unuttum</u></string>
    <string name="KategoriDuzenle">Kategori Düzenle</string>
    <string name="KategoriEkle">Kategori Ekle</string>
    <string name="KategoriSil">Kategori Sil</string>
    <string name="ButunKategoriler">Bütün Kategoriler</string>
    <string name="CumleDuzenle">Cümle Düzenle</string>
    <string name="CumleEkle">Cümle Ekle</string>
    <string name="CumleSil">Cümle Sil</string>
    <string name="ButunCumleler">Bütün Cümleler</string>
    <string name="GeriDonusumKutusu">Geri Dönüşüm Kutusu</string>
    <string name="kategori_ekle">Kategori Ekle</string>
    <string name="kategori_duzenle">Kategori Düzenle</string>
    <string name="kategori_sil">Kategori Sil</string>
    <string name="butun_kategoriler">Bütün Kategoriler</string>
    <string name="ilkButon">ilk buton</string>
    <string name="ikinciButon">ikinci buton</string>
    <string name="kategori_adini_giriniz">Kategori Adını Giriniz.</string>
    <string name="ekle">Ekle</string>
    <string name="cumle_sayisi">Bulunan cümle sayısı : </string>
</resources>